Make it work and compile, declare graph trait, implement it for refcell graph

--- a/examples/refcell/Cargo.toml
+++ b/examples/refcell/Cargo.toml
@@ -13,4 +13,5 @@ name = "dijkstra"
 path = "dijkstra.rs"
 
 [dependencies]
+graph = { path = "../../src/graph", version = "0.1.0" }
 refcell = { path = "../../src/refcell", version = "0.1.0" }
